# metaxy

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  README.md  RELEASING.md  cliff.toml  codecov.yaml  conftest.py  devbox.json  devenv.nix  devenv.yaml  dprint.json  flake.nix  justfile  mkdocs.yml  noxfile.py  pyproject.toml  ruff.toml  tach.toml  test_typing.py  versions.json
.basedpyright/: baseline.json
docs/.mkdocs-metaxy/: README.md  pyproject.toml  ruff.toml
docs/.mkdocs-metaxy/src/: metaxy_config.py  metaxy_examples.py
docs/.mkdocs-metaxy/src/mkdocs_metaxy/: __init__.py  config_generator.py  gen_config_reference.py  griffe_config.py  griffe_experimental.py  griffe_public.py  validate_glossary.py  validate_public.py
docs/.mkdocs-metaxy/src/mkdocs_metaxy/config/: __init__.py  markdown_ext.py  plugin.py
examples/: README.md  pyproject.toml  ruff.toml
examples/example-aggregation/: .example.result.json  .example.yaml  README.md  metaxy.toml  pipeline.py  pyproject.toml  ruff.toml
examples/example-aggregation/patches/: 01_update_audio_provenance.patch  02_add_audio.patch
examples/example-aggregation/src/example_aggregation/: __init__.py  features.py
examples/example-alembic/: .example.result.json  .example.yaml  README.md  alembic.ini  metaxy.toml  pyproject.toml
examples/example-alembic/alembic/: env.py  script.py.mako
examples/example-alembic/src/example_alembic/: __init__.py  definitions.py  pipeline.py
examples/example-basic/: .example.result.json  .example.yaml  README.md  metaxy.toml  pyproject.toml  ruff.toml
examples/example-basic/patches/: 01_update_parent_algorithm.patch
examples/example-basic/src/example_basic/: __entrypoint__.py  compute_child.py  compute_parent.py  features.py  pipeline.py
examples/example-dagster/: README.md  metaxy.toml  pyproject.toml  ruff.toml
examples/example-dagster/src/example_dagster/: __init__.py  definitions.py
examples/example-ducklake/: .example.result.json  .example.yaml  README.md  metaxy.toml  pyproject.toml  ruff.toml
examples/example-ducklake/src/example_ducklake/: definitions.py  demo.py  pipeline.py
examples/example-expansion/: .example.result.json  .example.yaml  README.md  metaxy.toml  pipeline.py  pyproject.toml  ruff.toml
examples/example-expansion/patches/: 01_update_video_code_version.patch
examples/example-expansion/src/example_expansion/: features.py  utils.py
examples/example-integration-dagster/: README.md  metaxy.toml  pyproject.toml
examples/example-integration-dagster/src/example_integration_dagster/: __init__.py  branch_subsampled.py  branch_subset.py  minimal.py  non_partitioned.py  partitioned.py  subsampled.py
examples/example-intro/: .example.result.json  .example.yaml  README.md  metaxy.toml  pyproject.toml
examples/example-intro/patches/: 01_update_transcription.patch
examples/example-intro/src/example_intro/: __entrypoint__.py  features.py  pipeline.py
examples/example-migration/: README.md  metaxy.toml  pyproject.toml
examples/example-migration/.metaxy/migrations/: example_migration.yaml
examples/example-migration/src/example_migration/: __entrypoint__.py  compute_child.py  compute_parent.py  features_1.py  features_2.py  pipeline.py  push.py  setup_data.py
examples/example-one-to-many/: .example.result.json  .example.yaml  README.md  metaxy.toml  pipeline.py  pyproject.toml
examples/example-one-to-many/patches/: 01_update_video_code_version.patch
examples/example-one-to-many/src/example_one_to_many/: __init__.py  features.py
examples/example-overview/: .example.result.json  .example.yaml  README.md  metaxy.toml  pyproject.toml  ruff.toml
examples/example-overview/patches/: 01_update_audio_version.patch
examples/example-overview/src/example_overview/: __entrypoint__.py  __init__.py  features.py  features_1.py  features_2.py
examples/example-quickstart/: .example.result.json  .example.yaml  README.md  metaxy.toml  pyproject.toml  ruff.toml
examples/example-quickstart/src/example_quickstart/: features.py  pipeline.py
examples/example-ray/: .example.result.json  .example.yaml  README.md  metaxy.toml  pyproject.toml
examples/example-ray/src/example_ray/: __entrypoint__.py  __init__.py  basic_pipeline.py  definitions.py  features.py  materialize_dagster.py  materialize_production.py  production_definitions.py
examples/example-recompute/: .example.result.json  .example.yaml  metaxy.toml  pyproject.toml
examples/example-recompute/patches/: 01_update_parent_algorithm.patch
examples/example-recompute/src/example_recompute/: __entrypoint__.py  compute_child.py  compute_parent.py  features.py  features_2.py
examples/migration-examples/: 20250101_120000_simple_reconciliation.py  20250101_130000_custom_backfill.py  20250101_140000_dynamic_operations.py  20250101_150000_custom_validation.py  20250101_160000_metadata_backfill.py  README.md
examples/src/examples/customizing_id_columns/: sample.py
examples/src/examples/ducklake/: __entrypoint__.py  __init__.py  demo.py  features.py  metaxy.toml  pipeline.py  setup_data.py
examples/src/examples/migration/: README.md  __entrypoint__.py  compute_child.py  compute_parent.py  features_1.py  features_2.py  metaxy.toml  pipeline.py  push.py  setup_data.py
examples/src/examples/overview/: README.md  __entrypoint__.py  __init__.py  features_1.py  features_2.py  metaxy.toml
examples/src/examples/recompute/: README.md  __entrypoint__.py  compute_child.py  compute_parent.py  features_1.py  features_2.py  metaxy.toml  pipeline.py  setup_data.py
examples/src/examples/video_chunking/: README.md  __init__.py  advanced_features.py  features.py  metaxy.toml
tests/fixtures/test-project/: entrypoint_detection.py  entrypoints_group_discovery.py  metaxy.toml  pyproject.toml
tests/metaxy_testing/: pyproject.toml
tests/metaxy_testing/src/metaxy_testing/: __init__.py  analyze_timings.py  doctest_fixtures.py  metaxy_project.py  models.py  pytest_helpers.py  ray_features.py  runbook.py
tests/metaxy_testing/tests/: test_analyze_test_timing.py
(+1964 files in other folders)
