[project]
name = "metaxy"
version = "0.0.1.dev30"
description = "Pluggable versioned metadata management for incremental multi-modal pipelines."
readme = "README.md"
authors = [
  { name = "Daniel Gafni", email = "danielgafni16@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "cyclopts>=4.4.0",
  "narwhals>=2.14.0",
  "platformdirs>=4.5.0",
  "polars>=1.35.0",
  "polars-hash>=0.5.1",
  "pydantic>=2.11.9",
  "pydantic-settings>=2.11.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "sqlglot>=28.1.0",
  "tomli>=2.3.0",
  "rich>=13.0.0",
  "packaging>=25.0",
]

[project.optional-dependencies]
ibis = [
  "pyarrow>=18.0.0",
  "ibis-framework>=11.0.0",
]
mermaid = [
  "mermaid-py>=0.8.0",
]
graphviz = [
  "pygraphviz>=1.14",
]
sqlmodel = [
  "sqlmodel>=0.0.27",
]
bigquery = [
  "ibis-framework[bigquery]>=11.0.0",
]
clickhouse = [
  "ibis-framework[clickhouse]>=11.0.0",
]
duckdb = [
  "ibis-framework[duckdb]>=11.0.0",
  "duckdb>=1.4.1",
]
delta = [
  "deltalake>=1.2.1",
  "ibis-framework>=11.0.0",
]
dagster = [
  "dagster>=1.12.3",
]

lancedb = [
  "lancedb>=0.15.0",
  "polars>=1.36.1",
]
mcp = [
  "fastmcp>=2.0.0",
]
ray = [
  "ray>2.36.0",
]

[project.scripts]
metaxy = "metaxy.cli.app:main"
mx = "metaxy.cli.app:main"

[project.urls]
Documentation = "https://metaxy.dev"
Repository = "https://github.com/anam-org/metaxy"
Issues = "https://github.com/anam-org/metaxy/issues"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "examples",
  "ipython>=8.37.0",
  "boto3>=1.35.0",
  "duckdb>=1.4.1",
  "pytest>=8.4.2",
  "pytest-cases>=3.9.1",
  "hypothesis>=6.142.4",
  "ruff>=0.14.4",
  "syrupy>=5.0.0",
  "ibis-framework[duckdb,clickhouse]>=11.0.0",
  "lancedb>=0.15.0",
  "vulture>=2.14",
  "prek>=0.2.11",
  "pytest-env>=1.2.0",
  "pytest-cov>=7.0.0",
  "pytest-rerunfailures>=15.0",
  "hypothesis>=6.142.4",
  "dprint-py>=0.50.2.0",
  "moto[s3,server]>=5.1.16",
  "deltalake>=1.2.1",
  "mistune>=3.1.4",
  "dagster>=1.12.3",
  "ty==0.0.10",
  "datafusion>=51.0.0",
  "pytest-asyncio>=0.26.0",
  "pandas>=2.3.3",
  "ray>2.36.0",
  "numpy>=2.2.6",
]

examples = [
  "examples",
]

docs = [
  "griffe>=1.14.0",
  "griffe-inherited-docstrings>=1.1.2",
  "griffe-pydantic>=1.1.8",
  "mike>=2.1.3",
  "mkdocs>=1.6.1",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-github-admonitions-plugin>=0.1.1",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-material[imaging]>=9.6.20",
  "mkdocs-section-index>=0.3.10",
  "mkdocstrings-python>=1.18.2",
  "pymdown-extensions>=10.16.1",
  "cyclopts[mkdocs]",
  "mkdocs-autoapi>=0.4.1",
  "mkdocs-api-autonav>=0.4.0",
  "mkdocs-metaxy",
  "examples",
  "mkdocs-macros-plugin>=1.5.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "I",
  "TID252",
  "UP",
  "ICN001", # enforces common aliases
  "ICN003", # bans certain from imports
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-tidy-imports]
# Ban certain modules from being imported at module level, instead requiring
# that they're imported lazily (e.g., within a function definition).
banned-module-level-imports = ["ibis", "duckdb"]

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = ["dagster", "narwhals", "polars"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"metaxy" = "mx"
"dagster" = "dg"
"polars" = "pl"
"narwhals" = "nw"

[tool.uv.workspace]
members = [
  "examples",
  "examples/example-*",
  "docs/.mkdocs-metaxy",
]

[tool.uv.sources]
examples = { workspace = true }
mkdocs-metaxy = { workspace = true }

[tool.vulture]
exclude = [
  "src/metaxy/_testing.py",
  "src/metaxy/cli/",
  "examples/**/feature*.py",
]
min_confidence = 60

[tool.coverage.run]
source = ["src/metaxy"]
branch = true
parallel = true
concurrency = ["multiprocessing", "thread"]
sigterm = true
omit = [
  "src/metaxy/_testing.py",
  "src/metaxy/_testing/*",
  # getting coverage for Ray actors is... complicated
  # https://github.com/ray-project/ray/issues/9059
  # probably should be done later
  "src/metaxy/ext/ray/**",
  "tests/*",
  "examples/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = [
  "src",
  "tests",
  "examples",
]
exclude = [
  ".venv",
  "tests/models/test_extra_args_forbidden.py", # intentionally passes invalid args for runtime validation
]

[tool.pytest.ini_options]
addopts = "--snapshot-details"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = [
  "METAXY_AUTO_CREATE_TABLES=1",
  "RAY_ENABLE_UV_RUN_RUNTIME_ENV=0",
]
filterwarnings = [
  "error::polars.exceptions.PerformanceWarning",
  "ignore:AUTO_CREATE_TABLES is enabled:UserWarning",
  "ignore:Global Metaxy configuration not initialized:UserWarning",
  "ignore::hypothesis.errors.NonInteractiveExampleWarning",
  "ignore::metaxy.metadata_store.warnings.MetaxyColumnMissingWarning",
  "ignore::metaxy.metadata_store.warnings.PolarsMaterializationWarning",
]
markers = [
  "duckdb: DuckDB store tests",
  "clickhouse: ClickHouse store tests",
  "ibis: Ibis-based store tests (DuckDB, ClickHouse)",
  "native: Stores with native compute capabilities",
  "polars: Stores using Polars for compute",
  "delta: Delta Lake store tests",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
