[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "example-basic",
  "example-overview",
  "example-migration",
  "example-ducklake",
  "example-one-to-many",
  "example-dagster",
  "example-aggregation",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint]
ignore = [
  "E402", # examples often have imports in the middle
]

[tool.uv.sources]
# metaxy = { workspace = true }

example-overview = { workspace = true }
example-basic = { workspace = true }
example-migration = { workspace = true }
example-ducklake = { workspace = true }
example-one-to-many = { workspace = true }
example-dagster = { workspace = true }
example-aggregation = { workspace = true }
