[project]
name = "example-alembic"
version = "0.1.0"
description = "Alembic migration example with DuckLake"
readme = "README.md"
authors = [
  { name = "danielgafni", email = "danielgafni16@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
  "metaxy[duckdb,sqlmodel]",
  "duckdb>=1.5.0,<1.6",
  "alembic>=1.17.0,<1.18",
  "duckdb-engine>=0.17.0,<0.18",
]

[tool.uv.sources]
metaxy = { path = "../..", editable = true }

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
